Added Intro slide and Question 1

--- a/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Intro_Form.resx
+++ b/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Intro_Form.resx
@@ -117,4 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Yes_Label.Text" xml:space="preserve">
+    <value>Perfect!. Welcome to an interactive learning guide  of how muscle contraction works. This guide will explain from start to finish the process of the inner parts of the muscle cell that work to make the muscle contract</value>
+  </data>
+  <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="Timer2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>106, 17</value>
+  </metadata>
 </root>
