--- a/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Question6.resx
+++ b/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Question6.resx
@@ -123,4 +123,7 @@
   <metadata name="Timer2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>106, 17</value>
   </metadata>
+  <data name="AROS_Label.Text" xml:space="preserve">
+    <value>Correct: After the ACh binds into its key and lock system in its receptors this actually changes the permeability of the membrane because like said before that’s the job of the ACh being a neurotransmitter. This changes the membrane spot for sodium to then rush out into the sarcoplasm this then leads to another wave of action potential. After this wave is now gone it leaves the Ach in its spot and whatever Ach did not fall into a receptor AChE or Acetylcholinesterase breaks down the extra and recycles the ACh to prepare for another motor neuron message.  </value>
+  </data>
 </root>
