--- a/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Question3.resx
+++ b/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Question3.resx
@@ -123,4 +123,7 @@
   <metadata name="Timer2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>106, 17</value>
   </metadata>
+  <data name="HKOTA_Label.Text" xml:space="preserve">
+    <value>The synaptic terminal is the very end of the motor neuron is the spot where the action potential finally kicks off. The synaptic terminal contains molecules of acetylcholine or ACh which it will dump. </value>
+  </data>
 </root>
