--- a/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Question5.resx
+++ b/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Question5.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="SC_Label.Text" xml:space="preserve">
+    <value>Correct: The ACh dumps into a narrow space referred to as the synaptic cleft which separates the synaptic terminal and the sarcolemma respectfully. When the ACh dumps across from the cleft is the motor endplate that holds onto the ACh receptor cite these receptors are for the ACh to collect into with a lock and key type format. Only the ACh will click being the key into the lock of the receptor. </value>
+  </data>
   <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
