--- a/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Question7.resx
+++ b/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Question7.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="TAPS_Label.Text" xml:space="preserve">
+    <value>Correct: The action potential spreads across the entire sarcolemma surface from the rush of sodium from the receptors connected to it. The action potential also floods down the T tubules which cause a massive release of calcium ions.</value>
+  </data>
   <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
