--- a/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Question9.resx
+++ b/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Question9.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="RTT_Label.Text" xml:space="preserve">
+    <value>Correct:  Within the lowest levels of the muscle are the sarcomeres. A sarcomere consists of thin and thick filaments that change in their zone of overlap during a contraction. Thin filaments consist of actin and when and the active site gets exposed it will form a cross-bridge with the myosin of the thick filaments making the two components connect. </value>
+  </data>
   <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
